[package]
name = "devbox-build"
version = "0.1.1"
authors = ["Peter Koželj"]
description = "Library for writing build.rs build sripts"
repository = "https://github.com/peterkozelj/devbox"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
filetime = "0.2.7"
globset = "0.4.4"
walkdir = "2"

[dev-dependencies]
devbox-test-args = { path = "../devbox-test-args", version = "0.1.0" }
tempfile = "3"
