[package]
name = "devbox-test-args"
version = "0.1.0"
authors = ["Peter Koželj"]
description = "Parametrized tests macro"
repository = "https://github.com/peterkozelj/devbox"
documentation = "https://docs.rs/devbox_test/0.1.0"
license = "MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = {version = "1", features = ["full"]}

[lib]
path = "src/lib.rs"
bench = false
proc-macro = true
