[package]
name = "devbox-test-args"
version = "0.1.2"
authors = ["Peter Koželj"]
description = "Parametrized tests macro"
readme = "README.md"
repository = "https://github.com/peterkozelj/devbox"
license = "MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = {version = "1", features = ["full"]}

[lib]
path = "src/lib.rs"
bench = false
proc-macro = true
