[package]
name = "devbox-test"
version = "0.1.0"
authors = ["Peter Koželj"]
description = "Developer toolbox for writing tests"
repository = "https://github.com/peterkozelj/devbox"
documentation = "https://docs.rs/devbox/0.1.0"
readme = "../README.md"
license = "MIT"
categories = ["development-tools"]
edition = "2018"
publish = false

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = {version = "1", features = ["full"]}

[lib]
path = "src/lib.rs"
bench = false
proc-macro = true
