[package]
name = "devbox"
version = "0.1.0"
authors = ["Peter Koželj"]
description = "Developer toolbox for building and testing"
repository = "https://github.com/peterkozelj/devbox"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
devbox-test-args = { path = "../devbox-test-args", version = "0.1.2" }
devbox-build = { path = "../devbox-build", version = "0.1.0" }
